--- a/Front/Index.html
+++ b/Front/Index.html
@@ -14,15 +14,26 @@
         <button type="submit">Se connecter</button>
     </form>
 
+    <div id="admin-section" style="display: none;">
+        <h2>Section Administrateur</h2>
+        <p>Accès complet aux données sensibles.</p>
+    </div>
+
+    <div id="user-section" style="display: none;">
+        <h2>Section Utilisateur</h2>
+        <p>Accès limité.</p>
+    </div>
 
     <h1>Membres de l'Association</h1>
     <form id="member-form" style="display: none;">
         <input type="text" id="name" placeholder="Nom" required>
         <input type="email" id="email" placeholder="Email" required>
+        <label for="majeur">Majeur</label>
         <select id="majeur">
             <option value="oui">Oui</option>
             <option value="non">Non</option>
         </select>
+        <label for="licencePayee">Licence Payée</label>
         <select id="licencePayee">
             <option value="oui">Oui</option>
             <option value="non">Non</option>
